Bug 390558 - Can't mount a media with UNC containing $ (dollar symbol)
Summary: Can't mount a media with UNC containing $ (dollar symbol)
Status: RESOLVED FIXED
Alias: None
Product: Smb4k
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Alexander Reinholdt
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-02-16 13:09 UTC by Sebastien CELLES
Modified: 2018-03-04 16:29 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Sebastien CELLES 2018-02-16 13:09:48 UTC
Hello,

I try to mount a remote SMB directory available at

\\xx.yy.zz.tt\share$\mylogin

But I get the following error

Le montage du partage \\xx.yy.zz.tt\share$mylogin (without / after $) a échoué.


mount error(6): No such device or address
Refer to the mount.cifs(8) manual page


\\xx.yy.zz.tt\intranet_public is available without any issue.

I wonder if there isn't an issue with "$" character in this UNC.

$ cat /proc/version
Linux version 4.13.0-32-generic (buildd@lgw01-amd64-016) (gcc version 7.2.0 (Ubuntu 7.2.0-8ubuntu3)) #35-Ubuntu SMP Thu Jan 25 09:13:46 UTC 2018
$ cat /etc/issue
Ubuntu 17.10 \n \l

Kind regards
Comment 1 Sebastien CELLES 2018-02-16 13:10:32 UTC
\\xx.yy.zz.tt\share$mylogin

(without \ after $)
Comment 2 Alexander Reinholdt 2018-02-25 10:05:23 UTC
Thank you for reporting this issue. 

I suppose you are using the mount dialog for mounting?
Comment 3 Sebastien CELLES 2018-02-25 12:07:55 UTC
Exactly
Comment 4 Alexander Reinholdt 2018-03-04 14:56:36 UTC
Git commit 35256bc75e6cc4972cc1e6862dd15b68c945bb6e by Alexander Reinholdt.
Committed on 04/03/2018 at 14:56.
Pushed by areinholdt into branch 'master'.

Fix mounting of shares with a UNC like //server/share/$user.

M  +10   -2    core/smb4kshare.cpp

https://commits.kde.org/smb4k/35256bc75e6cc4972cc1e6862dd15b68c945bb6e
Comment 5 Alexander Reinholdt 2018-03-04 16:29:48 UTC
Git commit f323ada71a1c3e4627095edbf09b11ee0b0a3c17 by Alexander Reinholdt.
Committed on 04/03/2018 at 16:29.
Pushed by areinholdt into branch '2.1'.

Fix mounting of shares with a UNC like //server/share/$user.
(cherry picked from commit 35256bc75e6cc4972cc1e6862dd15b68c945bb6e)

M  +10   -2    core/smb4kshare.cpp

https://commits.kde.org/smb4k/f323ada71a1c3e4627095edbf09b11ee0b0a3c17