Fix mounting of shares with a UNC like //server/share/$user.

BUG: 390558
(cherry picked from commit 35256bc75e6cc4972cc1e6862dd15b68c945bb6e)